Add swagger endpoint Product
